Actualizacion Manejo de Excepciones